--- a/portfolio.html
+++ b/portfolio.html
@@ -134,7 +134,7 @@
 
 		<footer class="footer">
 			<div class="container">
-				<a href="./index.html" class="logo">Web<span class="logo-light">Studio</span></a>
+				<div class="logo-footer"><a href="./index.html" class="logo">Web<span class="logo-light">Studio</span></a></div>
 				<p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 			</div>
 		</footer>
