--- a/index.html
+++ b/index.html
@@ -99,13 +99,79 @@
 					</ul>
 				</div>
 			</section>
+
+			<section class="section">
+				<div class="container">
+					<h2 class="section-title">Customers</h2>
+					<ul class="customers">
+						<li class="list"><a href="#customer" class="customer-item">
+							<svg width="104" height="56" class="customer-logo">
+								<use href="./images/icons.svg#icon-customer1"></use>
+							  </svg>
+						</a></li>
+						<li class="list"><a href="#customer" class="customer-item">
+							<svg width="104" height="56" class="customer-logo">
+								<use href="./images/icons.svg#icon-customer2"></use>
+							  </svg>
+						</a></li>
+						<li class="list"><a href="#customer" class="customer-item">
+							<svg width="104" height="56" class="customer-logo">
+								<use href="./images/icons.svg#icon-customer3"></use>
+							  </svg>
+						</a></li>
+						<li class="list"><a href="#customer" class="customer-item">
+							<svg width="104" height="56" class="customer-logo">
+								<use href="./images/icons.svg#icon-customer4"></use>
+							  </svg>
+						</a></li>
+						<li class="list"><a href="#customer" class="customer-item">
+							<svg width="104" height="56" class="customer-logo">
+								<use href="./images/icons.svg#icon-customer5"></use>
+							  </svg>
+						</a></li>
+						<li class="list"><a href="#customer" class="customer-item">
+							<svg width="104" height="56" class="customer-logo">
+								<use href="./images/icons.svg#icon-customer6"></use>
+							  </svg>
+						</a></li>
+					</ul>
+				</div>
+			</section>
 		</main>
 
 		<footer class="footer">
-			<div class="container">
-				<a href="./index.html" class="logo">Web<span class="logo-light">Studio</span></a>
-				<p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+			<div class="container footer-flex">
+				<div>
+				<div class="logo-footer"><a href="./index.html" class="logo">Web<span class="logo-light">Studio</span></a></div>
+				<p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+				</div>
+				<div>
+				<p class="social-media">Social media</p>
+				<ul class="list social-media-list">
+					<li><a href="#inst" class="social-media-link">
+						<svg width="24" height="24" class="">
+							<use href="./images/icons.svg#icon-inst"></use>
+						  </svg>	
+					</a></li>
+					<li><a href="#twit" class="social-media-link">
+						<svg width="24" height="24" class="">
+							<use href="./images/icons.svg#icon-twit"></use>
+						  </svg>
+					</a></li>
+					<li><a href="#fb" class="social-media-link">
+						<svg width="24" height="24" class="">
+							<use href="./images/icons.svg#icon-fb"></use>
+						  </svg>
+					</a></li>
+					<li><a href="#lnkd" class="social-media-link">
+						<svg width="24" height="24" class="">
+							<use href="./images/icons.svg#icon-lnkd"></use>
+						  </svg>
+					</a></li>
+				</ul>
+				</div>
 			</div>
+			
 		</footer>
 	</body>
 </html>
