--- a/index.html
+++ b/index.html
@@ -41,14 +41,29 @@
 					<h2 class="section-title visually-hidden">Advantage</h2>
 					<ul class="advantage-list list">
 						<li class="item">
+							<div class="advantage-icon">
+							<svg width="64" height="64">
+								<use href="./images/icons.svg#icon-antenna"></use>
+							  </svg>
+							</div>
 							<h3 class="advantage">Strategy</h3>
 							<p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
 						</li>
 						<li class="item">
+							<div class="advantage-icon">
+								<svg width="64" height="64">
+									<use href="./images/icons.svg#icon-clock"></use>
+								  </svg>
+								</div>
 							<h3 class="advantage">Punctuality</h3>
 							<p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
 						</li>
 						<li class="item">
+							<div class="advantage-icon">
+								<svg width="64" height="64">
+									<use href="./images/icons.svg#icon-diagram"></use>
+								  </svg>
+								</div>
 							<h3 class="advantage">Diligence</h3>
 							<p
 								>Research and confirm brands that present the strongest digital growth opportunities and minimize
@@ -56,6 +71,11 @@
 							>
 						</li>
 						<li class="item">
+							<div class="advantage-icon">
+								<svg width="64" height="64">
+									<use href="./images/icons.svg#icon-astronaut"></use>
+								  </svg>
+								</div>
 							<h3 class="advantage">Technologies</h3>
 							<p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
 						</li>
@@ -82,19 +102,111 @@
 					<ul class="team-list list">
 						<li class="team-item shadow">
 							<img src="./images/team/mark-guerrero.jpg" alt="Photo Mark Guerrero" height="260" class="team-img" />
-							<div class="team-card"><h3 class="team-name">Mark Guerrero</h3> <p>Product Designer</p></div>
+							<div class="team-card"><h3 class="team-name">Mark Guerrero</h3> <p>Product Designer</p>
+							<ul class="list team-links">
+								<li><a href="#inst" class="team-link">
+									<svg width="16" height="16">
+										<use href="./images/icons.svg#icon-inst"></use>
+									  </svg>	
+								</a></li>
+								<li><a href="#twit" class="team-link">
+									<svg width="16" height="16">
+										<use href="./images/icons.svg#icon-twit"></use>
+									  </svg>	
+								</a></li>
+								<li><a href="#fb" class="team-link">
+									<svg width="16" height="16">
+										<use href="./images/icons.svg#icon-fb"></use>
+									  </svg>	
+								</a></li>
+								<li><a href="#lnkd" class="team-link">
+									<svg width="16" height="16">
+										<use href="./images/icons.svg#icon-lnkd"></use>
+									  </svg>	
+								</a></li>
+							</ul>
+							</div>
 						</li>
 						<li class="team-item shadow">
 							<img src="./images/team/tom-ford.jpg" alt="Photo Tom Ford" height="260" class="team-img" />
-							<div class="team-card"><h3 class="team-name">Tom Ford</h3> <p>Frontend Developer</p></div>
+							<div class="team-card"><h3 class="team-name">Tom Ford</h3> <p>Frontend Developer</p>
+								<ul class="list team-links">
+									<li><a href="#inst" class="team-link">
+										<svg width="16" height="16">
+											<use href="./images/icons.svg#icon-inst"></use>
+										  </svg>	
+									</a></li>
+									<li><a href="#twit" class="team-link">
+										<svg width="16" height="16">
+											<use href="./images/icons.svg#icon-twit"></use>
+										  </svg>	
+									</a></li>
+									<li><a href="#fb" class="team-link">
+										<svg width="16" height="16">
+											<use href="./images/icons.svg#icon-fb"></use>
+										  </svg>	
+									</a></li>
+									<li><a href="#lnkd" class="team-link">
+										<svg width="16" height="16">
+											<use href="./images/icons.svg#icon-lnkd"></use>
+										  </svg>	
+									</a></li>
+								</ul>
+							</div>
 						</li>
 						<li class="team-item shadow">
 							<img src="./images/team/camila-garcia.jpg" alt="Photo Camila Garcia" height="260" class="team-img" />
-							<div class="team-card"><h3 class="team-name">Camila Garcia</h3> <p>Marketing</p></div>
+							<div class="team-card"><h3 class="team-name">Camila Garcia</h3> <p>Marketing</p>
+								<ul class="list team-links">
+									<li><a href="#inst" class="team-link">
+										<svg width="16" height="16">
+											<use href="./images/icons.svg#icon-inst"></use>
+										  </svg>	
+									</a></li>
+									<li><a href="#twit" class="team-link">
+										<svg width="16" height="16">
+											<use href="./images/icons.svg#icon-twit"></use>
+										  </svg>	
+									</a></li>
+									<li><a href="#fb" class="team-link">
+										<svg width="16" height="16">
+											<use href="./images/icons.svg#icon-fb"></use>
+										  </svg>	
+									</a></li>
+									<li><a href="#lnkd" class="team-link">
+										<svg width="16" height="16">
+											<use href="./images/icons.svg#icon-lnkd"></use>
+										  </svg>	
+									</a></li>
+								</ul>
+							</div>
 						</li>
 						<li class="team-item shadow">
 							<img src="./images/team/daniel-wilson.jpg" alt="Photo Daniel Wilson" height="260" class="team-img" />
-							<div class="team-card"><h3 class="team-name">Daniel Wilson</h3> <p>UI Designer</p></div>
+							<div class="team-card"><h3 class="team-name">Daniel Wilson</h3> <p>UI Designer</p>
+								<ul class="list team-links">
+									<li><a href="#inst" class="team-link">
+										<svg width="16" height="16">
+											<use href="./images/icons.svg#icon-inst"></use>
+										  </svg>	
+									</a></li>
+									<li><a href="#twit" class="team-link">
+										<svg width="16" height="16">
+											<use href="./images/icons.svg#icon-twit"></use>
+										  </svg>	
+									</a></li>
+									<li><a href="#fb" class="team-link">
+										<svg width="16" height="16">
+											<use href="./images/icons.svg#icon-fb"></use>
+										  </svg>	
+									</a></li>
+									<li><a href="#lnkd" class="team-link">
+										<svg width="16" height="16">
+											<use href="./images/icons.svg#icon-lnkd"></use>
+										  </svg>	
+									</a></li>
+								</ul>
+							</div>
 						</li>
 					</ul>
 				</div>
@@ -105,22 +217,22 @@
 					<h2 class="section-title">Customers</h2>
 					<ul class="customers">
 						<li class="list"><a href="#customer" class="customer-item">
-							<svg width="104" height="56" class="customer-logo">
+							<svg width="104" height="56">
 								<use href="./images/icons.svg#icon-customer1"></use>
 							  </svg>
 						</a></li>
 						<li class="list"><a href="#customer" class="customer-item">
-							<svg width="104" height="56" class="customer-logo">
+							<svg width="104" height="56">
 								<use href="./images/icons.svg#icon-customer2"></use>
 							  </svg>
 						</a></li>
 						<li class="list"><a href="#customer" class="customer-item">
-							<svg width="104" height="56" class="customer-logo">
+							<svg width="104" height="56">
 								<use href="./images/icons.svg#icon-customer3"></use>
 							  </svg>
 						</a></li>
 						<li class="list"><a href="#customer" class="customer-item">
-							<svg width="104" height="56" class="customer-logo">
+							<svg width="104" height="56">
 								<use href="./images/icons.svg#icon-customer4"></use>
 							  </svg>
 						</a></li>
@@ -149,29 +261,28 @@
 				<p class="social-media">Social media</p>
 				<ul class="list social-media-list">
 					<li><a href="#inst" class="social-media-link">
-						<svg width="24" height="24" class="">
+						<svg width="24" height="24">
 							<use href="./images/icons.svg#icon-inst"></use>
 						  </svg>	
 					</a></li>
 					<li><a href="#twit" class="social-media-link">
-						<svg width="24" height="24" class="">
+						<svg width="24" height="24">
 							<use href="./images/icons.svg#icon-twit"></use>
 						  </svg>
 					</a></li>
 					<li><a href="#fb" class="social-media-link">
-						<svg width="24" height="24" class="">
+						<svg width="24" height="24">
 							<use href="./images/icons.svg#icon-fb"></use>
 						  </svg>
 					</a></li>
 					<li><a href="#lnkd" class="social-media-link">
-						<svg width="24" height="24" class="">
+						<svg width="24" height="24">
 							<use href="./images/icons.svg#icon-lnkd"></use>
 						  </svg>
 					</a></li>
 				</ul>
 				</div>
-			</div>
-			
+			</div>			
 		</footer>
 	</body>
 </html>
