--- a/portfolio.html
+++ b/portfolio.html
@@ -133,10 +133,37 @@
 		</main>
 
 		<footer class="footer">
-			<div class="container">
+			<div class="container footer-flex">
+				<div>
 				<div class="logo-footer"><a href="./index.html" class="logo">Web<span class="logo-light">Studio</span></a></div>
-				<p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-			</div>
+				<p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+				</div>
+				<div>
+				<p class="social-media">Social media</p>
+				<ul class="list social-media-list">
+					<li><a href="#inst" class="social-media-link">
+						<svg width="24" height="24">
+							<use href="./images/icons.svg#icon-inst"></use>
+						  </svg>	
+					</a></li>
+					<li><a href="#twit" class="social-media-link">
+						<svg width="24" height="24">
+							<use href="./images/icons.svg#icon-twit"></use>
+						  </svg>
+					</a></li>
+					<li><a href="#fb" class="social-media-link">
+						<svg width="24" height="24">
+							<use href="./images/icons.svg#icon-fb"></use>
+						  </svg>
+					</a></li>
+					<li><a href="#lnkd" class="social-media-link">
+						<svg width="24" height="24">
+							<use href="./images/icons.svg#icon-lnkd"></use>
+						  </svg>
+					</a></li>
+				</ul>
+				</div>
+			</div>			
 		</footer>
 	</body>
 </html>
