--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<main>
 			<section class="hero">
 				<h1 class="hero-title">Effective Solutions<br />for Your Business</h1>
-				<button type="button" class="primary">Order Service</button>
+				<button type="button" class="button-hero primary">Order Service</button>
 			</section>
 
 			<section class="section-adv">
