--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 					<ul class="advantage-list list">
 						<li class="item">
 							<div class="advantage-icon">
-							<svg width="64" height="64">
-								<use href="./images/icons.svg#icon-antenna"></use>
-							  </svg>
+								<svg width="64" height="64">
+									<use href="./images/icons.svg#icon-antenna"></use>
+								</svg>
 							</div>
 							<h3 class="advantage">Strategy</h3>
 							<p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
@@ -53,8 +53,8 @@
 							<div class="advantage-icon">
 								<svg width="64" height="64">
 									<use href="./images/icons.svg#icon-clock"></use>
-								  </svg>
-								</div>
+								</svg>
+							</div>
 							<h3 class="advantage">Punctuality</h3>
 							<p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
 						</li>
@@ -62,8 +62,8 @@
 							<div class="advantage-icon">
 								<svg width="64" height="64">
 									<use href="./images/icons.svg#icon-diagram"></use>
-								  </svg>
-								</div>
+								</svg>
+							</div>
 							<h3 class="advantage">Diligence</h3>
 							<p
 								>Research and confirm brands that present the strongest digital growth opportunities and minimize
@@ -74,8 +74,8 @@
 							<div class="advantage-icon">
 								<svg width="64" height="64">
 									<use href="./images/icons.svg#icon-astronaut"></use>
-								  </svg>
-								</div>
+								</svg>
+							</div>
 							<h3 class="advantage">Technologies</h3>
 							<p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
 						</li>
@@ -102,109 +102,129 @@
 					<ul class="team-list list">
 						<li class="team-item shadow">
 							<img src="./images/team/mark-guerrero.jpg" alt="Photo Mark Guerrero" height="260" class="team-img" />
-							<div class="team-card"><h3 class="team-name">Mark Guerrero</h3> <p>Product Designer</p>
-							<ul class="list team-links">
-								<li><a href="#inst" class="team-link">
-									<svg width="16" height="16">
-										<use href="./images/icons.svg#icon-inst"></use>
-									  </svg>	
-								</a></li>
-								<li><a href="#twit" class="team-link">
-									<svg width="16" height="16">
-										<use href="./images/icons.svg#icon-twit"></use>
-									  </svg>	
-								</a></li>
-								<li><a href="#fb" class="team-link">
-									<svg width="16" height="16">
-										<use href="./images/icons.svg#icon-fb"></use>
-									  </svg>	
-								</a></li>
-								<li><a href="#lnkd" class="team-link">
-									<svg width="16" height="16">
-										<use href="./images/icons.svg#icon-lnkd"></use>
-									  </svg>	
-								</a></li>
-							</ul>
+							<div class="team-card"
+								><h3 class="team-name">Mark Guerrero</h3> <p>Product Designer</p>
+								<ul class="list team-links">
+									<li
+										><a href="#inst" class="team-link">
+											<svg width="16" height="16">
+												<use href="./images/icons.svg#icon-inst"></use>
+											</svg> </a
+									></li>
+									<li
+										><a href="#twit" class="team-link">
+											<svg width="16" height="16">
+												<use href="./images/icons.svg#icon-twit"></use>
+											</svg> </a
+									></li>
+									<li
+										><a href="#fb" class="team-link">
+											<svg width="16" height="16">
+												<use href="./images/icons.svg#icon-fb"></use>
+											</svg> </a
+									></li>
+									<li
+										><a href="#lnkd" class="team-link">
+											<svg width="16" height="16">
+												<use href="./images/icons.svg#icon-lnkd"></use>
+											</svg> </a
+									></li>
+								</ul>
 							</div>
 						</li>
 						<li class="team-item shadow">
 							<img src="./images/team/tom-ford.jpg" alt="Photo Tom Ford" height="260" class="team-img" />
-							<div class="team-card"><h3 class="team-name">Tom Ford</h3> <p>Frontend Developer</p>
+							<div class="team-card"
+								><h3 class="team-name">Tom Ford</h3> <p>Frontend Developer</p>
 								<ul class="list team-links">
-									<li><a href="#inst" class="team-link">
-										<svg width="16" height="16">
-											<use href="./images/icons.svg#icon-inst"></use>
-										  </svg>	
-									</a></li>
-									<li><a href="#twit" class="team-link">
-										<svg width="16" height="16">
-											<use href="./images/icons.svg#icon-twit"></use>
-										  </svg>	
-									</a></li>
-									<li><a href="#fb" class="team-link">
-										<svg width="16" height="16">
-											<use href="./images/icons.svg#icon-fb"></use>
-										  </svg>	
-									</a></li>
-									<li><a href="#lnkd" class="team-link">
-										<svg width="16" height="16">
-											<use href="./images/icons.svg#icon-lnkd"></use>
-										  </svg>	
-									</a></li>
+									<li
+										><a href="#inst" class="team-link">
+											<svg width="16" height="16">
+												<use href="./images/icons.svg#icon-inst"></use>
+											</svg> </a
+									></li>
+									<li
+										><a href="#twit" class="team-link">
+											<svg width="16" height="16">
+												<use href="./images/icons.svg#icon-twit"></use>
+											</svg> </a
+									></li>
+									<li
+										><a href="#fb" class="team-link">
+											<svg width="16" height="16">
+												<use href="./images/icons.svg#icon-fb"></use>
+											</svg> </a
+									></li>
+									<li
+										><a href="#lnkd" class="team-link">
+											<svg width="16" height="16">
+												<use href="./images/icons.svg#icon-lnkd"></use>
+											</svg> </a
+									></li>
 								</ul>
 							</div>
 						</li>
 						<li class="team-item shadow">
 							<img src="./images/team/camila-garcia.jpg" alt="Photo Camila Garcia" height="260" class="team-img" />
-							<div class="team-card"><h3 class="team-name">Camila Garcia</h3> <p>Marketing</p>
+							<div class="team-card"
+								><h3 class="team-name">Camila Garcia</h3> <p>Marketing</p>
 								<ul class="list team-links">
-									<li><a href="#inst" class="team-link">
-										<svg width="16" height="16">
-											<use href="./images/icons.svg#icon-inst"></use>
-										  </svg>	
-									</a></li>
-									<li><a href="#twit" class="team-link">
-										<svg width="16" height="16">
-											<use href="./images/icons.svg#icon-twit"></use>
-										  </svg>	
-									</a></li>
-									<li><a href="#fb" class="team-link">
-										<svg width="16" height="16">
-											<use href="./images/icons.svg#icon-fb"></use>
-										  </svg>	
-									</a></li>
-									<li><a href="#lnkd" class="team-link">
-										<svg width="16" height="16">
-											<use href="./images/icons.svg#icon-lnkd"></use>
-										  </svg>	
-									</a></li>
+									<li
+										><a href="#inst" class="team-link">
+											<svg width="16" height="16">
+												<use href="./images/icons.svg#icon-inst"></use>
+											</svg> </a
+									></li>
+									<li
+										><a href="#twit" class="team-link">
+											<svg width="16" height="16">
+												<use href="./images/icons.svg#icon-twit"></use>
+											</svg> </a
+									></li>
+									<li
+										><a href="#fb" class="team-link">
+											<svg width="16" height="16">
+												<use href="./images/icons.svg#icon-fb"></use>
+											</svg> </a
+									></li>
+									<li
+										><a href="#lnkd" class="team-link">
+											<svg width="16" height="16">
+												<use href="./images/icons.svg#icon-lnkd"></use>
+											</svg> </a
+									></li>
 								</ul>
 							</div>
 						</li>
 						<li class="team-item shadow">
 							<img src="./images/team/daniel-wilson.jpg" alt="Photo Daniel Wilson" height="260" class="team-img" />
-							<div class="team-card"><h3 class="team-name">Daniel Wilson</h3> <p>UI Designer</p>
+							<div class="team-card"
+								><h3 class="team-name">Daniel Wilson</h3> <p>UI Designer</p>
 								<ul class="list team-links">
-									<li><a href="#inst" class="team-link">
-										<svg width="16" height="16">
-											<use href="./images/icons.svg#icon-inst"></use>
-										  </svg>	
-									</a></li>
-									<li><a href="#twit" class="team-link">
-										<svg width="16" height="16">
-											<use href="./images/icons.svg#icon-twit"></use>
-										  </svg>	
-									</a></li>
-									<li><a href="#fb" class="team-link">
-										<svg width="16" height="16">
-											<use href="./images/icons.svg#icon-fb"></use>
-										  </svg>	
-									</a></li>
-									<li><a href="#lnkd" class="team-link">
-										<svg width="16" height="16">
-											<use href="./images/icons.svg#icon-lnkd"></use>
-										  </svg>	
-									</a></li>
+									<li
+										><a href="#inst" class="team-link">
+											<svg width="16" height="16">
+												<use href="./images/icons.svg#icon-inst"></use>
+											</svg> </a
+									></li>
+									<li
+										><a href="#twit" class="team-link">
+											<svg width="16" height="16">
+												<use href="./images/icons.svg#icon-twit"></use>
+											</svg> </a
+									></li>
+									<li
+										><a href="#fb" class="team-link">
+											<svg width="16" height="16">
+												<use href="./images/icons.svg#icon-fb"></use>
+											</svg> </a
+									></li>
+									<li
+										><a href="#lnkd" class="team-link">
+											<svg width="16" height="16">
+												<use href="./images/icons.svg#icon-lnkd"></use>
+											</svg> </a
+									></li>
 								</ul>
 							</div>
 						</li>
@@ -216,36 +236,42 @@
 				<div class="container">
 					<h2 class="section-title">Customers</h2>
 					<ul class="customers">
-						<li class="list"><a href="#customer" class="customer-item">
-							<svg width="104" height="56">
-								<use href="./images/icons.svg#icon-customer1"></use>
-							  </svg>
-						</a></li>
-						<li class="list"><a href="#customer" class="customer-item">
-							<svg width="104" height="56">
-								<use href="./images/icons.svg#icon-customer2"></use>
-							  </svg>
-						</a></li>
-						<li class="list"><a href="#customer" class="customer-item">
-							<svg width="104" height="56">
-								<use href="./images/icons.svg#icon-customer3"></use>
-							  </svg>
-						</a></li>
-						<li class="list"><a href="#customer" class="customer-item">
-							<svg width="104" height="56">
-								<use href="./images/icons.svg#icon-customer4"></use>
-							  </svg>
-						</a></li>
-						<li class="list"><a href="#customer" class="customer-item">
-							<svg width="104" height="56" class="customer-logo">
-								<use href="./images/icons.svg#icon-customer5"></use>
-							  </svg>
-						</a></li>
-						<li class="list"><a href="#customer" class="customer-item">
-							<svg width="104" height="56" class="customer-logo">
-								<use href="./images/icons.svg#icon-customer6"></use>
-							  </svg>
-						</a></li>
+						<li class="list"
+							><a href="#customer" class="customer-item">
+								<svg width="104" height="56">
+									<use href="./images/icons.svg#icon-customer1"></use>
+								</svg> </a
+						></li>
+						<li class="list"
+							><a href="#customer" class="customer-item">
+								<svg width="104" height="56">
+									<use href="./images/icons.svg#icon-customer2"></use>
+								</svg> </a
+						></li>
+						<li class="list"
+							><a href="#customer" class="customer-item">
+								<svg width="104" height="56">
+									<use href="./images/icons.svg#icon-customer3"></use>
+								</svg> </a
+						></li>
+						<li class="list"
+							><a href="#customer" class="customer-item">
+								<svg width="104" height="56">
+									<use href="./images/icons.svg#icon-customer4"></use>
+								</svg> </a
+						></li>
+						<li class="list"
+							><a href="#customer" class="customer-item">
+								<svg width="104" height="56" class="customer-logo">
+									<use href="./images/icons.svg#icon-customer5"></use>
+								</svg> </a
+						></li>
+						<li class="list"
+							><a href="#customer" class="customer-item">
+								<svg width="104" height="56" class="customer-logo">
+									<use href="./images/icons.svg#icon-customer6"></use>
+								</svg> </a
+						></li>
 					</ul>
 				</div>
 			</section>
@@ -254,35 +280,43 @@
 		<footer class="footer">
 			<div class="container footer-flex">
 				<div>
-				<div class="logo-footer"><a href="./index.html" class="logo">Web<span class="logo-light">Studio</span></a></div>
-				<p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+					<div class="logo-footer"
+						><a href="./index.html" class="logo">Web<span class="logo-light">Studio</span></a></div
+					>
+					<p class="footer-description"
+						>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p
+					>
 				</div>
 				<div>
-				<p class="social-media">Social media</p>
-				<ul class="list social-media-list">
-					<li><a href="#inst" class="social-media-link">
-						<svg width="24" height="24">
-							<use href="./images/icons.svg#icon-inst"></use>
-						  </svg>	
-					</a></li>
-					<li><a href="#twit" class="social-media-link">
-						<svg width="24" height="24">
-							<use href="./images/icons.svg#icon-twit"></use>
-						  </svg>
-					</a></li>
-					<li><a href="#fb" class="social-media-link">
-						<svg width="24" height="24">
-							<use href="./images/icons.svg#icon-fb"></use>
-						  </svg>
-					</a></li>
-					<li><a href="#lnkd" class="social-media-link">
-						<svg width="24" height="24">
-							<use href="./images/icons.svg#icon-lnkd"></use>
-						  </svg>
-					</a></li>
-				</ul>
+					<p class="social-media">Social media</p>
+					<ul class="list social-media-list">
+						<li
+							><a href="#inst" class="social-media-link">
+								<svg width="24" height="24">
+									<use href="./images/icons.svg#icon-inst"></use>
+								</svg> </a
+						></li>
+						<li
+							><a href="#twit" class="social-media-link">
+								<svg width="24" height="24">
+									<use href="./images/icons.svg#icon-twit"></use>
+								</svg> </a
+						></li>
+						<li
+							><a href="#fb" class="social-media-link">
+								<svg width="24" height="24">
+									<use href="./images/icons.svg#icon-fb"></use>
+								</svg> </a
+						></li>
+						<li
+							><a href="#lnkd" class="social-media-link">
+								<svg width="24" height="24">
+									<use href="./images/icons.svg#icon-lnkd"></use>
+								</svg> </a
+						></li>
+					</ul>
 				</div>
-			</div>			
+			</div>
 		</footer>
 	</body>
 </html>
